# blackbox

./: CMakeLists.txt  license.md  main.cpp  readme.md  tests.cpp
include/core/: client.h  colors.h  exception.h  utils.h
include/core/database/: database.h
src/core/: client.cpp  colors.cpp  exception.cpp  utils.cpp
src/core/database/: database.cpp
translate/javascriptPackage/: index.js
